RB-212: fix text overflow in the employee card

--- a/packages/near-dapp/src/entities/employees/ui/employee-card.module.css
+++ b/packages/near-dapp/src/entities/employees/ui/employee-card.module.css
@@ -1,5 +1,6 @@
 .card {
   margin: 0;
+  word-break: break-all;
 }
 
 @media screen(desktop) {
